stripped text layout from Frost

--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -134,34 +134,19 @@
     <Compile Include="Enumerations.cs" />
     <Compile Include="Check.cs" />
     <Compile Include="Formatting\BreakCondition.cs" />
-    <Compile Include="Formatting\BreakIndex.cs" />
-    <Compile Include="Formatting\Breakpoint.cs" />
     <Compile Include="Formatting\FontIdentifier.cs" />
+    <Compile Include="Formatting\Helpers.cs" />
     <Compile Include="Formatting\ShapedCluster.cs" />
-    <Compile Include="Formatting\Demerits.cs" />
     <Compile Include="Formatting\Enumerations.cs" />
     <Compile Include="Formatting\FontFeature.cs" />
     <Compile Include="Formatting\FontFeatureCollection.cs" />
     <Compile Include="Formatting\FontMetrics.cs" />
-    <Compile Include="Formatting\IDecoration.cs" />
-    <Compile Include="Formatting\IFormatter.cs" />
-    <Compile Include="Formatting\ILineProvider.cs" />
     <Compile Include="Formatting\ShapedGlyph.cs" />
     <Compile Include="Formatting\ShapedSpan.cs" />
     <Compile Include="Formatting\TextShaper.cs" />
     <Compile Include="Formatting\IShapedText.cs" />
-    <Compile Include="Formatting\ITextMetrics.cs" />
-    <Compile Include="Formatting\LineBreaker.cs" />
     <Compile Include="Formatting\LineBreakpoint.cs" />
-    <Compile Include="Formatting\LineCollection.cs" />
-    <Compile Include="Formatting\LineFitness.cs" />
-    <Compile Include="Formatting\LineItem.cs" />
     <Compile Include="Formatting\Outline.cs" />
-    <Compile Include="Formatting\OutlineCollection.cs" />
-    <Compile Include="Formatting\Paragraph.cs" />
-    <Compile Include="Formatting\RegionCollection.cs" />
-    <Compile Include="Formatting\TextRunCollection.cs" />
-    <Compile Include="Formatting\TextRun.cs" />
     <Compile Include="Collections\IndexedRange.cs" />
     <Compile Include="HSVColor.cs" />
     <Compile Include="Matrix3x2.cs" />
