minimal text api

--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -133,17 +133,18 @@
     <Compile Include="Effects\IEffectSettings.cs" />
     <Compile Include="Enumerations.cs" />
     <Compile Include="Check.cs" />
-    <Compile Include="Formatting\BreakCondition.cs" />
-    <Compile Include="Formatting\FontIdentifier.cs" />
-    <Compile Include="Formatting\Helpers.cs" />
+    <Compile Include="Formatting\LineBreakCondition.cs" />
+    <Compile Include="Formatting\FontHandle.cs" />
+    <Compile Include="Formatting\ListHelpers.cs" />
     <Compile Include="Formatting\Enumerations.cs" />
     <Compile Include="Formatting\FontFeature.cs" />
     <Compile Include="Formatting\FontFeatureCollection.cs" />
     <Compile Include="Formatting\FontMetrics.cs" />
-    <Compile Include="Formatting\TextShaper.cs" />
-    <Compile Include="Formatting\IShapedText.cs" />
+    <Compile Include="Formatting\IFormatter.cs" />
+    <Compile Include="Formatting\GlyphShaper.cs" />
+    <Compile Include="Formatting\IShapedGlyphs.cs" />
     <Compile Include="Formatting\LineBreakpoint.cs" />
-    <Compile Include="Formatting\Outline.cs" />
+    <Compile Include="Formatting\GlyphOutline.cs" />
     <Compile Include="Collections\IndexedRange.cs" />
     <Compile Include="HSVColor.cs" />
     <Compile Include="Matrix3x2.cs" />
