--- a/Frost.DirectX/Frost.DirectX.csproj
+++ b/Frost.DirectX/Frost.DirectX.csproj
@@ -125,6 +125,7 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TextAnalyzer.cs" />
     <Compile Include="CombinationSink.cs" />
     <Compile Include="Device2D.cs" />
     <Compile Include="DynamicSurface.cs" />
@@ -137,12 +138,14 @@
     <Compile Include="PrivateSurface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SafeList.cs" />
+    <Compile Include="Shaper.cs" />
     <Compile Include="SharedSurface.cs" />
     <Compile Include="SimplificationSink.cs" />
     <Compile Include="TessellationSink.cs" />
     <Compile Include="TextGeometryCache.cs" />
     <Compile Include="TextGeometryKey.cs" />
     <Compile Include="TextGeometrySink.cs" />
+    <Compile Include="TextShaper.cs" />
     <Compile Include="WideningSink.cs" />
   </ItemGroup>
   <ItemGroup>
