--- a/Frost.DirectX/Frost.DirectX.csproj
+++ b/Frost.DirectX/Frost.DirectX.csproj
@@ -125,6 +125,8 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Deprecate\FeatureRange.cs" />
+    <Compile Include="GlyphShaper.cs" />
     <Compile Include="TextAnalyzer.cs" />
     <Compile Include="CombinationSink.cs" />
     <Compile Include="Device2D.cs" />
@@ -138,7 +140,7 @@
     <Compile Include="PrivateSurface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SafeList.cs" />
-    <Compile Include="Shaper.cs" />
+    <Compile Include="Deprecate\Shaper.cs" />
     <Compile Include="SharedSurface.cs" />
     <Compile Include="SimplificationSink.cs" />
     <Compile Include="TessellationSink.cs" />
