--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -131,17 +131,17 @@
     <Compile Include="Effects\IEffectSettings.cs" />
     <Compile Include="Enumerations.cs" />
     <Compile Include="Check.cs" />
-    <Compile Include="Shaping\LineBreakCondition.cs" />
-    <Compile Include="Shaping\FontHandle.cs" />
-    <Compile Include="Shaping\Helpers.cs" />
-    <Compile Include="Shaping\Enumerations.cs" />
-    <Compile Include="Shaping\FontFeature.cs" />
-    <Compile Include="Shaping\FontFeatureCollection.cs" />
-    <Compile Include="Shaping\FontMetrics.cs" />
-    <Compile Include="Shaping\Shaper.cs" />
-    <Compile Include="Shaping\IShapedGlyphs.cs" />
-    <Compile Include="Shaping\LineBreakpoint.cs" />
-    <Compile Include="Shaping\Outline.cs" />
+    <Compile Include="Formatting\LineBreakCondition.cs" />
+    <Compile Include="Formatting\FontHandle.cs" />
+    <Compile Include="Formatting\Helpers.cs" />
+    <Compile Include="Formatting\Enumerations.cs" />
+    <Compile Include="Formatting\FontFeature.cs" />
+    <Compile Include="Formatting\FontFeatureCollection.cs" />
+    <Compile Include="Formatting\FontMetrics.cs" />
+    <Compile Include="Formatting\TextShaper.cs" />
+    <Compile Include="Formatting\IShapedGlyphs.cs" />
+    <Compile Include="Formatting\LineBreakpoint.cs" />
+    <Compile Include="Formatting\GlyphOutline.cs" />
     <Compile Include="Collections\IndexedRange.cs" />
     <Compile Include="HSVColor.cs" />
     <Compile Include="Matrix3x2.cs" />
@@ -150,11 +150,11 @@
     <Compile Include="Painting\GradientStop.cs" />
     <Compile Include="Painting\Painter.cs" />
     <Compile Include="Management\IResourceHelpers.cs" />
-    <Compile Include="Construction\Enumerations.cs" />
-    <Compile Include="Construction\Figure.cs" />
-    <Compile Include="Construction\IFigureHelpers.cs" />
-    <Compile Include="Construction\IGeometrySink.cs" />
-    <Compile Include="Construction\ITessellationSink.cs" />
+    <Compile Include="Shaping\Enumerations.cs" />
+    <Compile Include="Shaping\Shape.cs" />
+    <Compile Include="Shaping\IShapeHelpers.cs" />
+    <Compile Include="Shaping\IGeometrySink.cs" />
+    <Compile Include="Shaping\ITessellationSink.cs" />
     <Compile Include="Surfacing\Enumerations.cs" />
     <Compile Include="Surfacing\ISurface2D.cs" />
     <Compile Include="Point.cs" />
