--- a/Frost.DirectX/Frost.DirectX.csproj
+++ b/Frost.DirectX/Frost.DirectX.csproj
@@ -146,7 +146,7 @@
     <Compile Include="TextGeometryCache.cs" />
     <Compile Include="TextGeometryKey.cs" />
     <Compile Include="TextGeometrySink.cs" />
-    <Compile Include="TextShaper.cs" />
+    <Compile Include="TextTextShaper.cs" />
     <Compile Include="WideningSink.cs" />
   </ItemGroup>
   <ItemGroup>
